incorporate some updates from BES comments

--- a/paper/01-bayes_cpm_mods.Rmd
+++ b/paper/01-bayes_cpm_mods.Rmd
@@ -66,7 +66,7 @@ DONE
 
 Cumulative models for ordinal outcomes -- traditionally denoted cumulative link models [@agresti_categorical_2002] -- have been discussed extensively in the literature using both classical (frequentist) and Bayesian implementations. Since these models are characterized by adding probabilities, not link functions, we prefer the nomenclature cumulative probability model (CPM). Under the frequentist paradigm, Walker and Duncan [@walker_estimation_1967] and McCullagh [@peter_mccullagh_regression_1980] described these models as an extension of dichotomous outcome regression models such as logistic and probit regression. A Bayesian CPM for ordinal regression was explored by Albert and Chib [@albert_bayesian_1993; @albert_bayesian_1997] and Johnson and Albert [@johnson_ordinal_1999]. Additional Bayesian CPM extensions including partial proportional odds [@peterson_partial_1990], mixture link models [@lang_bayesian_1999], location-scale ordinal regression and multivariate ordinal outcomes are described by Congdon [@congdon_bayesian_2005]. In all these settings, the number of ordered outcome categories is implicitly assumed to be much smaller than the sample size. However, continuous data where each distinct value is its own category are also ordinal and can therefore be fit using CPMs.
 
-In the continuous outcome setting, Liu et al. [@liu_modeling_2017] demonstrate the equivalence between CPMs and transformation models of the form:
+In the continuous outcome setting, Liu et al. [@liu_modeling_2017] demonstrate the equivalence between CPMs and semiparametric linear transformation models of the form:
 \begin{equation}
 Y=H(\boldsymbol{\beta}^{T}X+\varepsilon) \quad \text{with} \quad \varepsilon \sim F_{\varepsilon}
 \end{equation}
@@ -88,13 +88,13 @@ A primary challenge when implementing Bayesian CPMs for continuous outcomes is t
 
 # Methods
 
-## Cumulative Probability Model formulation
+## Cumulative Probability Model Formulation
 <!-- see Albert & Chib 1997 - sec 2, and Johnson & Albert Ordinal Data Modeling to clean up this section-->
-Let $Y_i$ be the outcome for unit $i=1,\ldots,n$ with $p$ associated covariates $\boldsymbol{X_i}=(X_{i1},\ldots,X_{ip})$ such that each $Y_i$ falls into one of $j=1,\ldots, J$ ordered categories. The $Y_i$ can be modeled using a $Categorical(\boldsymbol{\pi_i})$ -- or $Multinomial(1,\boldsymbol{\pi_i})$ -- distribution where $\boldsymbol{\pi_i}=(\pi_{i1}, \ldots, \pi_{iJ})$ are the probabilities of unit $i$ being in category $j$ and $\sum_{j=1}^{J}\pi_{ij}=1$. The value of $\pi_{ij}$ is dependent on $x_i$, but we suppress the conditional notation<!-- except where it is needed --> for clarity. The cumulative probability of falling into category $j$ or a lower category is $Pr(Y_i \le j)=\eta_{ij}=\sum_{k=1}^{j}\pi_{ik}$. The CPM relates the cumulative probabilities to the observed covariates through a monotonically increasing link function $G^{-1}(\eta_{ij})=\gamma_{j}-\boldsymbol{x_i'\beta}$. Common choices for the link function are logit, $G^{-1}(p)=\log\left(\frac{p}{1-p}\right)$; probit, $G^{-1}(p)=\Phi^{-1}(p)$; and loglog, $G^{-1}(p)=-\log(-\log(p))$. For observed data $\{y_i,x_i\}$ the model can be expressed as
+Let $Y_i$ be the outcome for unit $i=1,\ldots,n$ with $p$ covariates $\boldsymbol{X_i}=(X_{i1},\ldots,X_{ip})$ such that each $Y_i$ falls into one of $j=1,\ldots, J$ ordered categories. The $Y_i$ can be modeled using a $Categorical(\boldsymbol{\pi_i})$ -- or $Multinomial(1,\boldsymbol{\pi_i})$ -- distribution where $\boldsymbol{\pi_i}=(\pi_{i1}, \ldots, \pi_{iJ})$ are the probabilities of unit $i$ being in category $j$ and $\sum_{j=1}^{J}\pi_{ij}=1$. The value of $\pi_{ij}$ is dependent on $\boldsymbol{x_i}$, but we suppress the conditional notation<!-- except where it is needed --> for clarity. The cumulative probability of falling into category $j$ or a lower category is $Pr(Y_i \le j)=\eta_{ij}=\sum_{k=1}^{j}\pi_{ik}$. The CPM relates the cumulative probabilities to the observed covariates through a monotonically increasing link function $G^{-1}(\eta_{ij})=\gamma_{j}-\boldsymbol{x_i'\beta}$. Common choices for the link function are logit, $G^{-1}(p)=\log\left(\frac{p}{1-p}\right)$; probit, $G^{-1}(p)=\Phi^{-1}(p)$; and loglog, $G^{-1}(p)=-\log(-\log(p))$. For observed data $\{y_i,\boldsymbol{x_i}\}$ the model can be expressed as
 \begin{gather}
-Pr(y_i \le j|\boldsymbol{x_i},\boldsymbol{\beta},\boldsymbol{\gamma})=\eta_{ij}=G(\gamma_{j}-\boldsymbol{x_i'\beta})
+Pr(y_i \le j|\boldsymbol{x_i},\boldsymbol{\beta},\boldsymbol{\gamma})=\eta_{ij}=G(\gamma_{j}-\boldsymbol{x_i'\beta}),
 \end{gather}
-Where the $\gamma_j$ are ordered continuous intercept parameters $-\infty \equiv \gamma_0 < \gamma_1 < \cdots < \gamma_{J-1} <\gamma_J \equiv \infty$, $\boldsymbol{\beta}$ is a vector of $p$ coefficients, and the function $G(\cdot)$ is a CDF defined as the inverse of the link function: standard logistic, standard normal, and standard Gumbel for the logit, probit, and loglog links, respectively. For identifiability, the linear predictor $\boldsymbol{x_i'\beta}$ does not include an intercept<!--, $\beta_0$-->.  The conditional probabilities of category membership are
+where the $\gamma_j$ are ordered continuous intercept parameters $-\infty \equiv \gamma_0 < \gamma_1 < \cdots < \gamma_{J-1} <\gamma_J \equiv \infty$, $\boldsymbol{\beta}$ is a vector of $p$ coefficients, and the function $G(\cdot)$ is a CDF defined as the inverse of the link function: standard logistic, standard normal, and standard Gumbel for the logit, probit, and loglog links, respectively. For identifiability, the linear predictor $\boldsymbol{x_i'\beta}$ does not include an intercept<!--, $\beta_0$-->.  The conditional probabilities of category membership are
 \begin{gather}
 \label{eq:cellprobs}
 \pi_{ij}=\eta_{i,j}-\eta_{i,j-1}=G(\gamma_j-\boldsymbol{x_i'\beta})-G(\gamma_{j-1}-\boldsymbol{x_i'\beta})
@@ -115,7 +115,7 @@ Specifying priors for $\boldsymbol{\gamma}$ is more challenging because of the o
 Both approaches provide priors that satisfy the ordering restriction, but may be cumbersome when the number of distinct categories is high. The first requires specification of the distribution and its hyperparameters, then sampling from the sequential series of $J-2$ truncated distributions; the second requires specification of the $J-1$ dimensional $\boldsymbol{\mu_0}$ vector and the $J-1 \times J-1$ dimensional covariance matrix $\boldsymbol{\Sigma_0}$.
 
 We instead adopt a third approach which defines a prior on $\boldsymbol{\pi_i}$ for a prespecified covariate vector and utilizes the transformation defined by $G(\cdot)$ to induce a prior on $\boldsymbol{\gamma}$ [@betancourt_ordinal_2019].
-Let $\pi_{.j} \equiv Pr(r(y)=j|x=0)$ be the probability of being in category $j$ when all covariates are 0 and $\boldsymbol{\pi_{.}}=(\pi_{.1},\ldots,\pi_{.J})$.
+Let $\pi_{.j} \equiv Pr(r(y)=j|\boldsymbol{x}=0)$ be the probability of being in category $j$ when all covariates are 0 and $\boldsymbol{\pi_{.}}=(\pi_{.1},\ldots,\pi_{.J})$.
 It may be useful to center the covariates by using $x'=x-\bar{x}$ in place of $x$. Then $\pi_{.j}$ is the probability of being in category $j$ when all covariates are at their mean value. From equation (\ref{eq:cellprobs}) it follows that
 \begin{gather}
 \pi_{.j}=G(\gamma_j-0)-G(\gamma_{j-1}-0)=G(\gamma_j)-G(\gamma_{j-1})
@@ -159,7 +159,7 @@ Where $j=1,\ldots,J-1$, $g(\cdot)$ is the density function of the distribution $
 \end{vmatrix}
 \end{equation}
 
-While it is possible to define separate $\alpha_j$ parameters for each category, we restrict our attention to symmetric Dirichlet distributions which use a single $\alpha$ value for all categories (i.e., $\alpha_1 = \alpha_2 = \cdots = \alpha_J$) so $\boldsymbol{\alpha}=\alpha\boldsymbol{1}$ where $\boldsymbol{1}$ is a $J-1$ dimensional vector of 1s. The symmetric Dirichlet prior on $\boldsymbol{\pi_{.}}$ along with the inverse transformation $h^{-1}(\cdot)$ defined in equation (\ref{eq:invtrans}) induces a prior for the $\boldsymbol{\gamma}$ with $\boldsymbol{\alpha}$ controlling the concentration of the induced prior. For example, figure \@ref(fig:probit-induced) shows induced $\boldsymbol{\gamma}$ priors assuming a probit link for several combinations of concentration parameter and number of categories. The priors are approximately distributed around the intercepts that result under an assumption of equal probability for all categories when $\boldsymbol{X}=\boldsymbol{0}$; that is, for $J=n$ the values $G^{-1}(\sum_{k=1}^j 1/n)=G^{-1}(j/n)=\hat{\gamma}_{j|X=0}$. <!--multinomial-Dirichlet in sec 3.4 of BDA3 -->The prior choices correspond to several options for a multinomial-Dirichlet model [@gelman_bayesian_2014]: a uniform Dirichlet ($\boldsymbol{\alpha}=1$), the multivariate Jeffreys prior ($\boldsymbol{\alpha}=1/2$), an overall objective prior recommended by Berger et al. [@berger_overall_2015] ($\boldsymbol{\alpha}=1/J$), and two additional 'reciprocal' priors ($\boldsymbol{\alpha}=1/(2+(J/3))$ and $\boldsymbol{\alpha}=1/(0.8+0.35J)$) found using trial-and-error. As the number of categories increases the uniform and Jeffreys priors more strongly favor intercepts assuming equal probability for all categories; the three reciprocal priors are adjusted to maintain the same degree of concentration relative to the equal probability intercepts, $\hat{\gamma}_{j|X=0}$.
+While it is possible to define separate $\alpha_j$ parameters for each category, we restrict our attention to symmetric Dirichlet distributions which use a single $\alpha$ value for all categories (i.e., $\alpha_1 = \alpha_2 = \cdots = \alpha_J$) so $\boldsymbol{\alpha}=\alpha\boldsymbol{1}$ where $\boldsymbol{1}$ is a $J-1$ dimensional vector of 1s. The symmetric Dirichlet prior on $\boldsymbol{\pi_{.}}$ along with the inverse transformation $h^{-1}(\cdot)$ defined in equation (\ref{eq:invtrans}) induces a prior for $\boldsymbol{\gamma}$ with $\boldsymbol{\alpha}$ controlling the concentration of the induced prior. For example, figure \@ref(fig:probit-induced) shows induced $\boldsymbol{\gamma}$ priors assuming a probit link for several combinations of concentration parameter and number of categories. The priors are approximately distributed around the intercepts that result under an assumption of equal probability for all categories when $\boldsymbol{X}=\boldsymbol{0}$; that is, for $J=n$ the values $G^{-1}(\sum_{k=1}^j 1/n)=G^{-1}(j/n)=\hat{\gamma}_{j|X=0}$. <!--multinomial-Dirichlet in sec 3.4 of BDA3 -->The prior choices correspond to several options for a multinomial-Dirichlet model [@gelman_bayesian_2014]: a uniform Dirichlet ($\boldsymbol{\alpha}=1$), the multivariate Jeffreys prior ($\boldsymbol{\alpha}=1/2$), an overall objective prior recommended by Berger et al. [@berger_overall_2015] ($\boldsymbol{\alpha}=1/J$), and two additional 'reciprocal' priors ($\boldsymbol{\alpha}=1/(2+(J/3))$ and $\boldsymbol{\alpha}=1/(0.8+0.35J)$) found using a trial-and-error procedure. As the number of categories increases the uniform and Jeffreys priors more strongly favor intercepts assuming equal probability for all categories; in contrast, the three reciprocal priors are adjusted to maintain the same degree of concentration relative to the equal probability intercepts, $\hat{\gamma}_{j|X=0}$.
 
 In multiparameter models, the choice of an objective reference prior depends on the parameter or statistic of interest (e.g. $\boldsymbol{\beta}$, conditional CDF, conditional mean) [@berger_overall_2015].  Without prior information, we seek a value of $\boldsymbol{\alpha}$ with minimal impact on inference for a variety of settings and quantities of interest while still producing posterior estimates that can be sampled well by the MCMC algorithm.
 
@@ -195,7 +195,9 @@ For example, the distribution of the posterior conditional CDF at $y_j$ with cov
 
 -->
 
-## Simulations
+# Simulations
+
+## Set-up
 
 To evaluate the <!--long-run frequency--> properties of the Bayesian CPM for continuous and mixed outcomes we generate data from several simulation scenarios:
 \begin{align*}
@@ -205,21 +207,12 @@ To evaluate the <!--long-run frequency--> properties of the Bayesian CPM for con
 \end{align*}
 where $\beta_1=1$, $\beta_2=-0.5$, $X_1 \sim Bernoulli(0.5)$ and $X_2 \sim N(0,1)$. For each scenario a second set of simulations was used to evaluate a mixed discrete/continuous outcome with a lower limit of detection; for scenario (1) and (2) values of $Y<1$ to were set to 1, for scenario (3) values of $Y<0$ were set to 0. The uncensored and censored outcome data based on (1) and (3) were evaluated using a Bayesian CPM with the properly specified probit and loglog links, respectively. For scenario (2) a logit link Bayesian CPM (which implies $\varepsilon \sim Logistic(0,1)$) was used. In each of the six outcome models, three $\boldsymbol{\alpha}$ concentration hyperparameters ($1/J$, $1/(2+(J/3))$, and $1/(0.8+0.35J)$) were considered for $p(\boldsymbol{\pi_{.}}|\boldsymbol{\alpha})$ for 18 model and prior combinations. Sample sizes $n=25,50,100,200$ and $400$ were used under each model/prior combination for a total of 90 simulation models. $1,000$ datasets were generated under each simulation model.
 
-We examine the average percent bias of the posterior median for parameters $\beta_1$ and $\beta_2$ and five $\gamma_j$ parameters corresponding to $y$ values spaced across the range of the data. For scenario (1) $\boldsymbol{y}=\{y_1=e^{-1},y_2=e^{-0.33},y_3=e^{0.5},y_4=e^{1.33},y_5=e^2\}$, for scenario (2) $\boldsymbol{y}=\{y_1=e^{-0.5},y_2=e^{0},y_3=e^{0.5},y_4=e^{1},y_5=e^{1.5}\}$ and for scenario (3) $\boldsymbol{y}=\{y_1=-0.3,y_2=0,y_3=0.5,y_4=1.5,y_5=2.5\}$. For the censored outcomes, estimates are only available for the values of $\boldsymbol{y}$ above the censoring threshold. We also calculate average percent bias of the conditional CDF for $\boldsymbol{y}$ when $X_1=1$ and $X_2=1$, and the conditional median, mean and 20th percentile at $(X_1=1,X_2=1)$ and $(X_1=1,X_2=0)$.
+We examine the average percent bias of the posterior median for parameters $\beta_1$ and $\beta_2$ and five $\gamma_j$ parameters corresponding to $y$ values spaced across the range of the data: For scenario (1) $\boldsymbol{y}=\{y_1=e^{-1},y_2=e^{-0.33},y_3=e^{0.5},y_4=e^{1.33},y_5=e^2\}$, for scenario (2) $\boldsymbol{y}=\{y_1=e^{-0.5},y_2=e^{0},y_3=e^{0.5},y_4=e^{1},y_5=e^{1.5}\}$ and for scenario (3) $\boldsymbol{y}=\{y_1=-0.3,y_2=0,y_3=0.5,y_4=1.5,y_5=2.5\}$. For the censored outcomes, estimates are only available for the values of $\boldsymbol{y}$ above the censoring threshold. We also calculate average percent bias of the conditional CDF for $\boldsymbol{y}$ when $X_1=1$ and $X_2=1$, and the conditional median, mean and 20th percentile at $(X_1=1,X_2=1)$ and $(X_1=1,X_2=0)$.
 
 <!--
 For scenarios (2) and (3), we also calculate the conditional and 80$^{th}$ percentile at $(X_1=1,X_2=0)$ and $(X_1=1,X_2=1)$.
 -->
 
-## Case Study
-
-<!-- Use HIV data from Dr. Koethe. Describe background, data and modeling approach -->
-
-The data for the case study were collected from 216 HIV-positive adults on antiretroviral therapy in two cohort studies (Vanderbilt Lipoatrophy and Neuropathy Cohort (LiNC), n=147; Adiposity and Immune Activation Cohort (AIAC), n=69). Further details on the study design and cohorts are provided in Koethe et al. [@koethe_serum_2012; @koethe_metabolic_2015]. Because people living with HIV have increased risk of diabetes and cardiovascular disease, the aim of the analysis was to estimate the association between body mass index (BMI) and several inflammation biomarkers in this population, adjusting for additional covariates: age, sex, race, smoking status, study location and CD4 cell count.
-
-We examine the biomarkers Interleukin 6 (IL-6) and Interleukin 1 beta (IL-1-$\beta$); both are right-skewed with 3% and 39% of values censored below the lower limit of detection, respectively. Censored values are set to 0. To account for skewness and censoring we fit Bayesian CPM models using logit, probit, and loglog link functions, noninformative $\beta$ priors and a concentration parameter of either $\boldsymbol{\alpha}=1/J$ or $\boldsymbol{\alpha}=1/(0.8+0.35J)$ for the Dirichlet prior to estimate the association between BMI and the conditional mean, median, and 90th quantile of each biomarker.
-
-We evaluate convergence using $\hat{R}$ scale reduction factor [@gelman_bayesian_2014] and traceplots of MCMC draws. Model comparison is performed using the difference in expected log predictive density (ELPD) calculated using leave-one-out cross-validation [@vehtari_practical_2017]. Model fit is assessed with graphical checks of the posterior predictive distribution and posterior predictive p-values [@stern_bayesian_2005; @gelman_bayesian_2014].
 
 <!--
 Model checking
@@ -229,11 +222,7 @@ Model checking
 - is there a test statistic and corresponding Bayesian p-value that makes sense in this setting? check Bayes notes and BDA3 
 -->
 
-
-# Results
-
-
-## Simulations
+## Results
 
 A Bayesian CPM was fit to each of the 1000 simulation datasets for each scenario/prior/sample size combination. For each simulation dataset, the median of the posterior distribution of the parameter or conditional CDF, mean, or quantile was used as a point estimate. These point estimates were compared to the true value from the generating model and the results averaged over all simulation datasets. Each model was run with 2 MCMC chains using 2000 warmup and 4000 total iterations for a total of 4000 posterior parameter vector draws per model. 
 
@@ -243,12 +232,13 @@ In general, the Bayesian CPM had reasonable performance in estimating parameters
 
 For scenario (1) using a properly specified probit link CPM, the average percent bias in the posterior median for $\beta_1$, $\beta_2$, and $\gamma_{y_k}$ is shown in figure \@ref(fig:simplt-pars-1) for the uncensored and censored outcome data.  Average percent bias is largest for the smallest sample sizes, but the direction and magnitude of the bias depends on the outcome, concentration prior and parameter. Across both outcomes, the estimates of $\beta_1$ and all $\gamma$s are larger using the $\boldsymbol{\alpha}=1/J$ concentration prior than the $\boldsymbol{\alpha}=1/(0.8+0.35J)$ or $\boldsymbol{\alpha}=1/(2+(J/3))$ concentration priors while the $\beta_2$ estimates are smaller with $\boldsymbol{\alpha}=1/J$. For the $\beta$ parameters, the priors $\boldsymbol{\alpha}=1/(0.8+0.35J)$ and $\boldsymbol{\alpha}=1/(2+(J/3))$ produce less biased estimates than $\boldsymbol{\alpha}=1/J$ for both outcomes. The situation is more complex for the $\gamma$ parameters. With the uncensored outcome, the $\boldsymbol{\alpha}=1/J$ prior estimate is less biased for $\gamma_{y_1}$ and $\gamma_{y_2}$, but more biased for $\gamma_{y_3}$, $\gamma_{y_4}$, and $\gamma_{y_5}$; with the censored outcome, the $\boldsymbol{\alpha}=1/J$ prior estimate is less biased for $\gamma_{y_3}$, but more biased for $\gamma_{y_4}$ and $\gamma_{y_5}$. 
 
-
 ```{r simplt-pars-1, fig.cap="Bias in parameters for simulations using probit link", fig.align='center', out.width='90%'}
 knitr::include_graphics(file.path(wd,"fig","sim_a_pars.png"))
 ```
 
-Figure \@ref(fig:simplt-pars-2) shows the average percent bias in the posterior median for $\beta_1$, $\beta_2$, and $\gamma_{y_k}$ for scenario (2) using a logit link CPM. The average percent bias is very large ($\pm 200\%$) for all parameters. Unlike scenario (1), the assumed scale of the logit link ($\varepsilon \sim Logistic(0,1)$) does not match the scale from the simulation model ($\varepsilon \sim Logistic(0,1/3)$). In this case it can be shown that the CPM parameter estimates are proportional to the parameters from the generating simulation model. Assume latent $Y^*=\beta'X + a\varepsilon$ with $\varepsilon \sim F_{\varepsilon}$ assumed known and constant scaling factor $a>0$, and observed $Y=H(Y^*)$ with increasing function $H(t)$. Then $Y=H(\beta'X+a\varepsilon)=H'(\xi'X+\varepsilon)$ where $\xi=a^{-1}\beta$ and $H'(t)=H(at)$ so $Pr(Y \le y|X)=Pr(H'(\xi'X+\varepsilon)\le y|X)=F_{\varepsilon}(H'^{-1}(y)-\xi'X)$. Using a CPM with link function $F_{\varepsilon}^{-1}$ to analyze the observed outcome $Y$ results in estimates of $\xi=a^{-1}\beta$ for the linear predictor coefficients and $H'^{-1}=a^{-1}H^{-1}$ for the intercept function. In this sense, the parameter estimates are biased because they are on the incorrect scale (i.e., the parameter estimates for scenario (2) are scaled by a factor of $(1/3)^{-1}=3$). If the estimates were adjusted using the scale factor, $a$, the bias in the parameters would follow a similar pattern as scenario (1)<!--(make fig?)-->. However in practice, the value of this scale factor is unknown.
+Figure \@ref(fig:simplt-pars-2) shows the average percent bias in the posterior median for $\beta_1$, $\beta_2$, and $\gamma_{y_k}$ for scenario (2) using a logit link CPM. Unlike scenario (1), the assumed scale of the latent variable with logit link ($\varepsilon \sim Logistic(0,1)$) does not match the scale from the simulation model ($\varepsilon \sim Logistic(0,1/3)$). In this case it can be shown that the CPM parameter estimates are proportional to the parameters from the generating simulation model. Assume latent $Y^*=\beta'X + a\varepsilon$ with $\varepsilon \sim F_{\varepsilon}$ known and constant scaling factor $a>0$, and observed $Y=H(Y^*)$ with increasing function $H(t)$. Then $Y=H(\beta'X+a\varepsilon)=H'(\xi'X+\varepsilon)$ where $\xi=a^{-1}\beta$ and $H'(t)=H(at)$ so $Pr(Y \le y|X)=Pr(H'(\xi'X+\varepsilon)\le y|X)=F_{\varepsilon}(H'^{-1}(y)-\xi'X)$. Using a CPM with link function $F_{\varepsilon}^{-1}$ to analyze the observed outcome $Y$ results in estimates of $\xi=a^{-1}\beta$ for the linear predictor coefficients and $H'^{-1}=a^{-1}H^{-1}$ for the intercept function. To compare the CPM model estimates (e.g. $\xi$, $H'^{-1}$) to the generating model parameters ($\beta$, $H^{-1}$) it is necessary to rescale by $a$. Conceptually this is equivalent to rescaling $\varepsilon$ for the
+latent $Y^*$ to match the assumed scale prior to fitting the CPM. Outside of simulations, the scale factor is not known but can be assumed to equal 1 without loss of generality because $Y^*$ is latent; therefore rescaling is not necessary in practice.
+
 
 For scenario (3) using the correctly specified loglog link with an identity transformation, overall trends resemble those in scenario (1) (see supplemental figure \@ref(fig:simplt-pars-3)). 
 
@@ -257,7 +247,8 @@ For scenario (3) using the correctly specified loglog link with an identity tran
 -->
 
 ```{r simplt-pars-2, fig.cap="Bias in parameters for simulations using logit link", fig.align='center', out.width='90%'}
-knitr::include_graphics(file.path(wd,"fig","sim_c_pars.png"))
+#knitr::include_graphics(file.path(wd,"fig","sim_c_pars.png"))
+knitr::include_graphics(file.path(wd,"fig","sim_c_pars_scaled.png"))
 ```
 
 
@@ -325,9 +316,23 @@ Simulations were performed using `R` version 3.6.0 (2019-04-26) and `rstan` (Ver
 knitr::include_graphics(file.path(wd,"fig","sim_MCMC_sample_times.png"))
 ```
 
-## Case Study
 
-For each of the two biomarker outcomes six model specifications were fit: probit, logit, or loglog link with $\boldsymbol{\alpha}=1/(0.8+0.35J)$ or $\boldsymbol{\alpha}=1/(0.8+0.35J)$. Each model sampled from 2 chains with 2000 warmup and 4000 total iterations to produce 4000 posterior sample draws for each parameter. For all models, traceplots showed no issues with mixing or stationarity; further, all $\hat{R}$ potential scale reduction values were $<1.01$ indicating likely convergence. Table \ref{tab:elpdtab} shows the difference in ELPD for the IL-6 and IL-1-$\beta$ biomarker models. Based on the difference in ELPD, the CPM with loglog link and $\boldsymbol{\alpha}=1/(0.8+0.35J)$ was used for the both outcomes, however there is little difference in ELPD along the top several models. 
+
+# Case Study
+
+<!-- Use HIV data from Dr. Koethe. Describe background, data and modeling approach -->
+
+## Background and Methods
+
+The data for the case study were collected from 216 HIV-positive adults on antiretroviral therapy in two cohort studies (Vanderbilt Lipoatrophy and Neuropathy Cohort (LiNC), n=147; Adiposity and Immune Activation Cohort (AIAC), n=69). Further details on the study design and cohorts are provided in Koethe et al. [@koethe_serum_2012; @koethe_metabolic_2015]. Because people living with HIV have increased risk of diabetes and cardiovascular disease, the aim of the analysis was to estimate the association between body mass index (BMI) and several inflammation biomarkers in this population, adjusting for additional covariates: age, sex, race, smoking status, study location and CD4 cell count.
+
+We examine the biomarkers Interleukin 6 (IL-6) and Interleukin 1 beta (IL-1-$\beta$); both are right-skewed with 3% and 39% of values censored below the lower limit of detection, respectively. Censored values are set to 0. To account for skewness and censoring we fit Bayesian CPM models using logit, probit, and loglog link functions, noninformative $\beta$ priors and a concentration parameter of either $\boldsymbol{\alpha}=1/J$ or $\boldsymbol{\alpha}=1/(0.8+0.35J)$ for the Dirichlet prior to estimate the association between BMI and the conditional mean, median, and 90th percentile of each biomarker.
+
+We evaluate convergence using $\hat{R}$ scale reduction factor [@gelman_bayesian_2014] and traceplots of MCMC draws. Model comparison is performed using the difference in expected log predictive density (ELPD) calculated using leave-one-out cross-validation [@vehtari_practical_2017]. Model fit is assessed with graphical checks of the posterior predictive distribution and posterior predictive p-values [@stern_bayesian_2005; @gelman_bayesian_2014].
+
+## Results
+
+For each of the two biomarker outcomes six model specifications were fit: probit, logit, or loglog link with $\boldsymbol{\alpha}=1/(0.8+0.35J)$ or $\boldsymbol{\alpha}=1/J$. Each model sampled from 2 chains with 2000 warmup and 4000 total iterations to produce 4000 posterior sample draws for each parameter. For all models, traceplots showed no issues with mixing or stationarity; further, all $\hat{R}$ potential scale reduction values were $<1.01$ indicating likely convergence. Table \ref{tab:elpdtab} shows the difference in ELPD for the IL-6 and IL-1-$\beta$ biomarker models. Based on the difference in ELPD, the CPM with loglog link and $\boldsymbol{\alpha}=1/(0.8+0.35J)$ was used for the both outcomes, however there is little difference in ELPD along the top several models. 
 
 ```{r elpd, include=FALSE}
 rnd<-2
@@ -480,12 +485,12 @@ Template
 
 Although Bayesian CPM models have been frequently applied to ordinal data when the number of outcome categories is much smaller than the sample size, the extension to continuous or mixed outcomes where the number of categories is close to the sample size can be accomplished with only a few modifications to the prior specification. These modifications provide a versatile model with several advantages including the ability to handle both continuous and discrete ordered outcomes and estimation of the full conditional CDF, along with quantiles and other functionals using a single model fit. Inference is based on posterior probability statements and does not require asymptotic assumptions. In addition, the CPM does not require specification of a transformation to meet distributional assumptions since the transformation is estimated nonparametrically. As a result its parameter estimates are invariant to monotonic transformations of the data. 
 
-Our implementation of a Bayesian CPM performed reasonably well for the simple simulation scenarios considered. However, the model can produce very biased estimates 
+Our implementation of a Bayesian CPM performed reasonably well for the simple simulation scenarios considered. However, the model can produce biased estimates 
 for quantiles far from the median and conditional quantities further from the model where $\boldsymbol{X}=0$ and this bias can be exacerbated by censoring<!--because, by design, we make no parametric assumptions that can provide information here-->.
 The model seems best suited for cases when the data are fairly dense and are sufficient to describe the posterior CDF well. In our simulations, a sample size of 50 or 100 was required for reasonably unbiased estimates of parameters and other posterior quantities. The choice of Dirichlet prior concentration with magnitude $\boldsymbol{\alpha} \approx \frac{1}{J}$ has minimal impact on the bias of posterior estimates, except with small sample sizes. Much larger concentration parameters (e.g., $\boldsymbol{\alpha}=1/2$) may be too informative. <!--Larger concentration parameters will shrink estimates heavily toward intercepts under assumption of equal probability --> <!-- Although the model can be used with mixed continuous/discrete data, care should be exercised when using mixed outcomes or estimating quantities based on the tails of the CDF-->
 As with all Bayesian models estimated with MCMC, checks of model convergence, model fit, and the posterior distribution are important. This is especially true when modeling a mixed continuous/discrete or when interest lies in quantities conditional on covariates far from the observed mean values.
 
-Finally, there are several of limitations of the current model that present an opportunity for improvement. First, the number of distinct outcome values is assumed to be known *a priori*, that is we condition on $J$ categories. In practice, the number of distinct continuous outcome values is unlikely to be available before data collection, so the prior cannot be specified without reference to the observed data. Relatedly, because the number of categories is fixed, the model cannot accommodate new observations for an unobserved category; once the initial prior is set, there is no way to add categories and all predictions are assumed to fall into one of the original categories. It may be possible to overcome this limitation by substituting the Dirichlet prior for a infinite-dimensional Bayesian nonparametric analog, such as a Dirichlet process prior, at the expense of additional complexity and computation time. Next, the choice of link function, and the implied error distribution on the scale of the latent untransformed data is also assumed to be known. As seen in the simulations, misspecification of the link function can lead to bias due to the mismatch between the assumed and latent error. This can make interpretation of the $\beta$ parameter estimates challenging because they are only estimated up to a constant of proportionality. If primary interest is not inference for the parameters, specification of the link could be avoided by either estimating the link nonparametrically [@mallick_bayesian_2003; @song_semiparametric_2012; @tang_semiparametric_2018] or using a more flexible mixture link function [@lang_bayesian_1999].
+Finally, there are several of limitations of the current model that present an opportunity for improvement. First, the number of distinct outcome values is assumed to be known *a priori*, that is we condition on $J$ categories. In practice, the number of distinct continuous outcome values is unlikely to be available before data collection, so the prior cannot be specified without reference to the observed data. Relatedly, because the number of categories is fixed, the model cannot accommodate new observations for an unobserved category; once the initial prior is set, there is no way to add categories and all predictions are assumed to fall into one of the original categories. It may be possible to overcome this limitation by substituting the Dirichlet prior for a infinite-dimensional Bayesian nonparametric analog, such as a Dirichlet process prior, at the expense of additional complexity and computation time. Next, the choice of link function, and the implied error distribution on the scale of the latent untransformed data is also assumed to be known. <!--As seen in the simulations, misspecification of the link function can lead to bias due to the mismatch between the assumed and latent error. This can make interpretation of the $\beta$ parameter estimates challenging because they are only estimated up to a constant of proportionality. --> If primary interest is not inference for the parameters, specification of the link could be avoided by either estimating the link nonparametrically, although other assumptions may be required for identifiability [@mallick_bayesian_2003; @song_semiparametric_2012; @tang_semiparametric_2018], or using a more flexible mixture link function [@lang_bayesian_1999].
 
 
 <!--
