update arxiv version with new comments

--- a/paper_arxiv/04-bayes_cpm_supp.Rmd
+++ b/paper_arxiv/04-bayes_cpm_supp.Rmd
@@ -10,15 +10,22 @@ knitr::include_graphics(file.path(wd,"fig","sim_d_pars.png"))
 ```
 
 
-```{r simplt-cdf-2, fig.cap="Bias in conditional CDF for simulations using logit link", fig.align='center', out.width='90%'}
+```{r simplt-cdf-2, fig.cap="Percent bias in conditional CDF for simulations using logit link", fig.align='center', out.width='90%'}
 knitr::include_graphics(file.path(wd,"fig","sim_c_cdf.png"))
 ```
 
-```{r simplt-cdf-3, fig.cap="Bias in conditional CDF for simulations using loglog link", fig.align='center', out.width='90%'}
+```{r simplt-cdf-3, fig.cap="Percent bias in conditional CDF for simulations using loglog link", fig.align='center', out.width='90%'}
 knitr::include_graphics(file.path(wd,"fig","sim_d_cdf.png"))
 ```
 
-```{r simplt-med-2, fig.cap="Bias in conditional median for simulations using logit link", fig.align='center', out.width='90%'}
+```{r simplt-mn-2, fig.cap="Percent bias in conditional mean for simulations using logit link", fig.align='center', out.width='90%'}
+knitr::include_graphics(file.path(wd,"fig","sim_c_mn.png"))
+```
+
+```{r simplt-med-2, fig.cap="Percent bias in conditional median for simulations using logit link", fig.align='center', out.width='90%'}
 knitr::include_graphics(file.path(wd,"fig","sim_c_med.png"))
 ```
 
+```{r simplt-med-3, fig.cap="Percent bias in conditional median for simulations using loglog link", fig.align='center', out.width='90%'}
+knitr::include_graphics(file.path(wd,"fig","sim_d_med.png"))
+```
